# jupyterlab_export_markdown_extension

./: .copier-answers.yml  .gitignore  .prettierignore  CHANGELOG.md  README.md  RELEASE.md  Research Report - VMS Anomaly Detection.html  conftest.py  install.json  package-lock.json  package.json  pyproject.toml
.claude/: JOURNAL.md
.github/workflows/: build.yml  check-release.yml
doc/: sample.md
jupyter-config/server-config/: jupyterlab_export_markdown_extension.json
jupyterlab_export_markdown_extension/: __init__.py  routes.py
jupyterlab_export_markdown_extension/tests/: __init__.py  test_routes.py
schema/: plugin.json
src/: index.ts  request.ts
src/__tests__/: jupyterlab_export_markdown_extension.spec.ts
ui-tests/: package.json
ui-tests/tests/: jupyterlab_export_markdown_extension.spec.ts
